# KB_2312

./: README.md
.gihub/: pull_request_template.md
.gihub/workflow/: linter.yml
.github/: pull_request_template.md
.github/workflows/: deployment.yml  linter.yml
server/: Cargo.toml  schema.graphql  schema.sql
server/src/: db.rs  main.rs  model.rs
server/src/model/: mutation.rs  query.rs
