[package]
name = "rewekey-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-graphql = "3"
async-graphql-rocket = "3"
rocket = "0.5.0-rc.2"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = "0.4"
pulldown-cmark = { version = "0.9.3", default-features = false }
rocket_cors = "0.6.0-alpha2"
